# SPHEREx_DataProcessing

./: .gitignore  README.md  pyproject.toml
src/spherex_helium/: __init__.py  classification.py  cli.py  discovery.py  fitsio.py  horizons.py  pipeline.py  plotting.py  processing.py  timeutils.py  types.py
tests/: test_core.py  test_pipeline_local.py
