[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherex-helium"
version = "0.1.0"
description = "SPHEREx metastable helium day-level processing and plotting"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SPHEREx helium processing contributors" }
]
dependencies = [
  "astropy>=5.2",
  "fsspec>=2024.2",
  "s3fs>=2024.2",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "requests>=2.31",
  "scipy>=1.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
spherex-helium = "spherex_helium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
